# hello-world

./: .travis.yml  CMakeLists.txt  README.md
cmake/: cppcheck.cmake
include/: hello-world.hpp
scripts/: build.sh  coverage.sh  cppcheck.sh
src/: hello-world.cpp  main.cpp
